fixed layout issues

--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,10 @@
-html, body, #root {
-  height: 100%
+html, body {
+  height: 100%;
+  position: relative;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
